tests/baselines/reference/es6ImportDefaultBinding.errors.txt
tests/cases/compiler/es6ImportDefaultBinding_1.ts(1,8): error TS1192: External module '"tests/cases/compiler/es6ImportDefaultBinding_0"' has no default export or export assignment.


==== tests/cases/compiler/es6ImportDefaultBinding_0.ts (0 errors) ====
    
    export var a = 10;
    
==== tests/cases/compiler/es6ImportDefaultBinding_1.ts (1 errors) ====
    import defaultBinding from "es6ImportDefaultBinding_0";
           ~~~~~~~~~~~~~~
!!! error TS1192: External module '"tests/cases/compiler/es6ImportDefaultBinding_0"' has no default export or export assignment.